--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,62 +13,60 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons:
 
   # ----- annotations ------
   
   # freezed 2.2.0
-  freezed_annotation: ^2.2.0
+  freezed_annotation:
   
   # json_annotation 4.8.0
-  json_annotation: ^4.8.0
+  json_annotation:
   
   # retrofit 4.0.1
-  retrofit: ^4.0.1
+  retrofit:
   
   # injectable 2.1.1
-  injectable: ^2.1.1
+  injectable:
  
-  # ----- dependency injection -----
+  # ----- dependency injection ----all-
 
   # get_it 7.2.0
-  get_it: ^7.2.0
+  get_it:
 
 
   # ----- network -----
 
   #dio 5.1.0
-  dio: ^5.1.0
+  dio:
 
   # ----- bloc -----
 
   # flutter_bloc 8.1.2
-  flutter_bloc: ^8.1.2
+  flutter_bloc:
 
   # go_router 7.0.0
-  go_router: ^7.0.0
-  bloc: ^8.1.1
-  bloc_concurrency: ^0.2.1
-  mocktail: ^0.3.0
-  
+  go_router:
+  bloc:
+  bloc_concurrency:
+  mocktail:
+
+  kakao_flutter_sdk_user:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-  flutter_lints: ^2.0.0
+  flutter_lints:
 
   #code generate
-  injectable_generator: ^2.1.5
-  retrofit_generator: ^6.0.0+1
-  freezed: ^2.3.2
-
-  build_runner: ^2.3.3
-  json_serializable: ^6.6.1
+  injectable_generator:
+  retrofit_generator:
+  freezed:
+  build_runner:
+  json_serializable:
 
   # code_metrics 5.7.2
-  dart_code_metrics: ^5.7.2
+  dart_code_metrics:
 
 
 flutter:
