--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,12 +54,17 @@ dependencies:
   kakao_flutter_sdk_user:
   jwt_decoder: ^2.0.1
 
+  hive:
+  hive_flutter:
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:
 
   #code generate
+  hive_generator:
   injectable_generator:
   retrofit_generator:
   freezed:
