카카오 로그인 완료

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,11 @@ dependencies:
   mocktail:
 
   kakao_flutter_sdk_user:
-  jwt_decoder: ^2.0.1
 
   hive:
   hive_flutter:
+  firebase_auth: ^4.6.1
+  firebase_core: ^2.13.0
 
 
 dev_dependencies:
