--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: sample_app
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: '>=3.0.0'
 
 
 dependencies:
@@ -30,7 +30,7 @@ dependencies:
   
   # injectable 2.1.1
   injectable:
- 
+
   # ----- dependency injection ----all-
 
   # get_it 7.2.0
@@ -58,7 +58,7 @@ dependencies:
   hive:
   hive_flutter:
 
-  stream_transform: 
+  stream_transform:
   firebase_auth: ^4.6.1
   firebase_core: ^2.13.0
 
