--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,12 +66,9 @@ dependencies:
   # 결제
   bootpay:
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints:
-
   #code generate
   hive_generator:
   injectable_generator:
@@ -79,9 +76,9 @@ dev_dependencies:
   freezed:
   build_runner:
   json_serializable:
+  dart_code_metrics: ^5.7.4
 
   # code_metrics 5.7.2
-  dart_code_metrics:
 
 
 flutter:
