--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    flavorDimensions "app"
+
+    productFlavors {
+        development {
+            dimension "app"
+            applicationIdSuffix ".dev"
+            resValue "string", "app_name", "패캠마켓DEV"
+        }
+        product {
+            dimension "app"
+            resValue "string", "app_name", "패캠마켓"
+        }
+    }
+
 //    signingConfigs {
 //       release {
 //           keyAlias keystoreProperties['keyAlias']
