--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.sample_app">
    <application
-        android:label="sample_app"
+        android:label="@string/app_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <!-- 카카오 로그인 커스텀 URL 스킴 설정 -->
+       <activity
+           android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+           android:exported="true">
+           <intent-filter android:label="flutter_web_auth">
+               <action android:name="android.intent.action.VIEW" />
+               <category android:name="android.intent.category.DEFAULT" />
+               <category android:name="android.intent.category.BROWSABLE" />
+
+               <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
+               <!-- 카카오 로그인 Redirect URI -->
+               <data android:scheme="kakaoaee609c5d69eea0d7ca44f09c467b87c" android:host="oauth"/>
+           </intent-filter>
+       </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
