--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   shimmer:
   firebase_crashlytics: ^3.3.3
   volume_controller: ^2.0.7
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -89,5 +90,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/.env.dev
+    - assets/.env
 
  
