1차 리펙토링

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -31,3 +31,4 @@ dart_code_metrics:
           - (.*)configure(.*)
           - (.*)BottomSheet
     - avoid-late-keyword: false
+    - avoid-passing-async-when-sync-expected: false
