--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ key.properties
 key.jks
 
 firebase_options.dart
+firebase_options_dev.dart
 firebase_app_id_file.json
 GoogleSErvice-info.plist
 google-services.json
