--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,18 +1,18 @@
 analyzer:
   plugins:
     - dart_code_metrics
+  exclude: [ lib/**.g.dart, lib/**_test_**.dart ]
 
 dart_code_metrics:
   extends:
     - package:dart_code_metrics_presets/all.yaml
   rules-exclude:
     - lib/**/injection_injectable.config.dart
-    - lib/**/*.g.dart
     - lib/**/*.freezed.dart
     - lib/firebase_options.dart
     - lib/firebase_options_dev.dart
     - test/**
-    - lib/**/bloc_test_observer.dart
+#    - lib/presentation_layer/common/bloc/bloc_test_observer.dart
   rules:
     - prefer-match-file-name: false
     - avoid-non-ascii-symbols: false
